--- a/hie.yaml
+++ b/hie.yaml
@@ -1,10 +1,10 @@
 cradle:
   cabal:
-    - path: "./packages/polysemy-http/lib"
+    - path: "./polysemy-http/lib"
       component: "lib:polysemy-http"
 
-    - path: "./packages/polysemy-http/test"
+    - path: "./polysemy-http/test"
       component: "polysemy-http:test:polysemy-http-unit"
 
-    - path: "./packages/polysemy-http/integration"
+    - path: "./polysemy-http/integration"
       component: "polysemy-http:test:polysemy-http-integration"
