--- a/polysemy-http/polysemy-http.cabal
+++ b/polysemy-http/polysemy-http.cabal
@@ -120,7 +120,7 @@ library
     , http-types >=0.12.3
     , lens >=4
     , polysemy >=1.7.1.0
-    , polysemy-log >=0.2.2.4
+    , polysemy-log >=0.4.2.0
     , polysemy-plugin >=0.4.3.0
     , relude >=0.7
     , template-haskell
@@ -211,14 +211,14 @@ test-suite polysemy-http-integration
     , http-types >=0.12.3
     , lens >=4
     , network
-    , polysemy >=1.6
+    , polysemy >=1.7.1.0
     , polysemy-http
-    , polysemy-log >=0.2.2.4
-    , polysemy-plugin >=0.4
+    , polysemy-log >=0.4.2.0
+    , polysemy-plugin >=0.4.3.0
     , relude >=0.7
-    , servant
-    , servant-client
-    , servant-server
+    -- , servant
+    -- , servant-client
+    -- , servant-server
     , tasty
     , tasty-hedgehog
     , template-haskell
@@ -309,10 +309,10 @@ test-suite polysemy-http-unit
     , http-client-tls >=0.3.1
     , http-types >=0.12.3
     , lens >=4
-    , polysemy >=1.6
+    , polysemy >=1.7.1.0
     , polysemy-http
-    , polysemy-log >=0.2.2.4
-    , polysemy-plugin >=0.4
+    , polysemy-log >=0.4.2.0
+    , polysemy-plugin >=0.4.3.0
     , relude >=0.7
     , tasty
     , tasty-hedgehog
